--- a/templates/manual4.html
+++ b/templates/manual4.html
@@ -18,7 +18,7 @@
                 </div>
 
                 <!-- Modal Structure -->
-                <form action="http://127.0.0.1:5000/demo_6" method="POST">
+                <form action="http://127.0.0.1:5000/manual6" method="POST">
                     <div class="row">
                         <div id="modal1" class="modal col s6">
                             <div class="modal-content">
