--- a/templates/manual6.html
+++ b/templates/manual6.html
@@ -8,12 +8,11 @@
     <div class="card-panel">
         <div class="row">
             <div class="col s12">
-                <h3>
-                    Hasil Prediksi: {{ hasil }}
-
+                <blockquote style="border-left: 5px solid #2196f3 ;"><h3>
+                    Hasil Pemodelan
                 </h3>
-                <p> ({{ waktu_prediksi }} s)</p>
-                <hr>
+                </blockquote>
+
                 <div class="col s12">
                     <h4>Tahapan</h4>
                     {% for key, value in tahap.items() %}
